Also trace symbol from the IR bfd

PR ld/15141
	* plugin.c (plugin_notice): Also trace symbol from the IR bfd.